improve TitlePage identification, test separation, Utils class, new nuget version

--- a/Source/FountainSharp.Parse.MobilePCL/FountainSharp.Parse.MobilePCL.fsproj
+++ b/Source/FountainSharp.Parse.MobilePCL/FountainSharp.Parse.MobilePCL.fsproj
@@ -52,6 +52,9 @@
     <Compile Include="..\FountainSharp.Parse\FountainHelper.fs">
       <Link>FountainHelper.fs</Link>
     </Compile>
+    <Compile Include="..\FountainSharp.Parse\Utils.fs">
+      <Link>Utils.fs</Link>
+    </Compile>
     <Compile Include="..\FountainSharp.Parse\FountainParser.fs">
       <Link>FountainParser.fs</Link>
     </Compile>
