--- a/Source/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Parse.Tests.fsproj
+++ b/Source/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Parse.Tests.fsproj
@@ -37,6 +37,7 @@
     <Compile Include="FountainTests.fs" />
     <Compile Include="TransitionTests.fs" />
     <Compile Include="CenteredTests.fs" />
+    <Compile Include="TitlePageTests.fs" />
     <Compile Include="Bugfixes.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Resources.fs" />
