correct Range calculation for inner elements of Title Page block

--- a/Source/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Parse.Tests.fsproj
+++ b/Source/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Parse.Tests.fsproj
@@ -34,6 +34,7 @@
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\4.0\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
     <Compile Include="RangeTests.fs" />
+    <Compile Include="ActionTests.fs" />
     <Compile Include="FountainTests.fs" />
     <Compile Include="BoneyardTests.fs" />
     <Compile Include="CenteredTests.fs" />
