--- a/nuspec/FountainSharp.nuspec
+++ b/nuspec/FountainSharp.nuspec
@@ -22,7 +22,7 @@
         <dependency id="FSharp.Core" version="4.0.1.7-alpha" />
         <dependency id="NetStandard.Library" version="1.6.0" />
       </group>-->
-      <group targetFramework="portable-net45+win8">
+      <group targetFramework="portable-net45+win8+wpa81+wp8">
         <dependency id="FSharp.Core" version="4.0.0.1 " />
       </group>
     </dependencies>
@@ -33,6 +33,6 @@
     <!-- .NET Standard 1.1 -->
     <!--<file src="../Source/FountainSharp.Parse.MobilePCL/bin/Release/FountainSharp.Parse.MobilePCL.dll" target="lib/netstandard1.1" />-->
     <!-- PCL -->
-    <file src="../Source/FountainSharp.Parse.MobilePCL/bin/Release/FountainSharp.Parse.MobilePCL.dll" target="lib/portable-net45+win8" />
+    <file src="../Source/FountainSharp.Parse.MobilePCL/bin/Release/FountainSharp.Parse.MobilePCL.dll" target="lib/portable-net45+win8+wpa81+wp8" />
   </files>
 </package>
