--- a/Source/FountainSharp.Parse.NetStandard/project.json
+++ b/Source/FountainSharp.Parse.NetStandard/project.json
@@ -6,13 +6,7 @@
     "compilerName": "fsc",
     "compile": {
       "includeFiles": [
-        "../FountainSharp.Parse/Collections.fs",
-        "../FountainSharp.Parse/StringParsing.fs",
-        "../FountainSharp.Parse/FountainSyntax.fs",
-        "../FountainSharp.Parse/FountainHelper.fs",
-        "../FountainSharp.Parse/FountainParser.fs",
-        "../FountainSharp.Parse/HtmlFormatting.fs",
-        "../FountainSharp.Parse/Fountain.fs"
+        "../FountainSharp.Parse/*.cs"
       ]
     }
   },
