update to version 1.0.0-pre22

--- a/Source/FountainSharp.Parse.NetStandard/project.json
+++ b/Source/FountainSharp.Parse.NetStandard/project.json
@@ -6,7 +6,14 @@
     "compilerName": "fsc",
     "compile": {
       "includeFiles": [
-        "../FountainSharp.Parse/*.cs"
+        "../FountainSharp.Parse/Collections.fs",
+        "../FountainSharp.Parse/StringParsing.fs",
+        "../FountainSharp.Parse/FountainSyntax.fs",
+        "../FountainSharp.Parse/FountainHelper.fs",
+        "../FountainSharp.Parse/Utils.fs",
+        "../FountainSharp.Parse/FountainParser.fs",
+        "../FountainSharp.Parse/FountainDocument.fs",
+        "../FountainSharp.Parse/HtmlFormatting.fs"
       ]
     }
   },
