--- a/Source/FountainSharp.Parse.MobilePCL/FountainSharp.Parse.MobilePCL.fsproj
+++ b/Source/FountainSharp.Parse.MobilePCL/FountainSharp.Parse.MobilePCL.fsproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{EF7FFC79-964B-41EC-A90F-BBDE329D2DFD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>FountainSharp.Parse.MobilePCL</RootNamespace>
-    <AssemblyName>FountainSharp.Parse.MobilePCL</AssemblyName>
+    <AssemblyName>FountainSharp.Parse</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
     <TargetFSharpCoreVersion>3.259.3.1</TargetFSharpCoreVersion>
