--- a/Source/TestProjects/FountainSharp.Parse.Tests/packages.config
+++ b/Source/TestProjects/FountainSharp.Parse.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="FSharp.Core" version="3.1.2.5" targetFramework="net452" />
   <package id="FsUnit" version="3.0.0" targetFramework="net452" />
-  <package id="NUnit" version="3.6.0" targetFramework="net452" />
+  <package id="NUnit" version="3.7.1" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.8.0-alpha1" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
 </packages>
